# spore-warriors-contract

./: Cargo.toml  README.md  capsule.toml
contracts/spore-warriors/: Cargo.toml
game/core/: Cargo.toml
game/core/src/: contexts.rs  errors.rs  game.rs  lib.rs  map.rs  wrappings.rs
game/core/src/battle/: traits.rs
game/core/src/battle/pve/: control.rs  iteration.rs  log.rs  mod.rs
game/core/src/contexts/: card.rs  enemy.rs  mod.rs  system.rs  warrior.rs
game/core/src/fight/: mod.rs  pve.rs  traits.rs
game/core/src/fight/pve/: control.rs  iteration.rs  log.rs  mod.rs
game/core/src/systems/: applications.rs  constant.rs  instant.rs  mod.rs  simple.rs  triggered.rs
tests/contracts/: Cargo.toml
tests/game/: Cargo.toml
tests/game/src/: lib.rs
tests/src/: tests.rs
