[package]
name = "spore-warriors-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { version = "0.7.5", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rlp = { version = "0.5.2", default-features = false, features = ["derive"] }

spore-warriors-generated = { path = "../generated" }
thiserror = { version = "1.0", optional = true }

[features]
default = []
debug = ["thiserror"]
