[package]
name = "game-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
eyre = "0.6.12"
molecule = "0.7.5"
rand = { version = "0.8.5", features = ["small_rng"] }

spore-warriors-core = { path = "../../game/core", features = ["debug"] }
spore-warriors-generated = { path = "../../game/generated" }
